--- a/app/views/smokeping/new.html.erb
+++ b/app/views/smokeping/new.html.erb
@@ -4,43 +4,27 @@
   <title>Smokeping Generator</title>
   <script language="javascript" type="text/javascript">
     function addtext() {
-      var newtext = document.myform.inputtext.value;
-      var stringArray = document.getElementById('inputtext').value.split('\n');
-      var x = 0;
       var line1 = "        ++++ ";
       var line2 = "        probe = FPing";
       var line3 = "        menu = ";
       var line4 = "        title = ";
       var line5 = "        host = ";
-      var patt = /\b\d{1,3}\.\d{1,3}\.\d{1,3}\.\d{1,3}\b/g;
 
+      var fping_counter = 0;
+      var patt = /\b\d{1,3}\.\d{1,3}\.\d{1,3}\.\d{1,3}\b/g;
+      var stringArray = document.getElementById('inputtext').value.split('\n');
       stringArray = stringArray.filter(function(n){return n});
 
       document.myform.outputtext.value = "";
       for (var i = 0; i < stringArray.length; ++i) {
 
-        document.myform.outputtext.value = document.myform.outputtext.value + "\n" + line1 + "\n" + line2 + x + "\n" + line3 + stringArray[i].replace(patt, "").trim()
+        document.myform.outputtext.value = document.myform.outputtext.value + "\n" + line1 + "\n" + line2 + fping_counter + "\n" + line3 + stringArray[i].replace(patt, "").trim()
           + "\n" + line4 + stringArray[i] + "\n" + line5 + " " + stringArray[i].match(patt) + "\n";
 
-        if (x == 9) {x = 0;} else {x++;}
+        if (fping_counter == 9) {fping_counter = 0;} else {fping_counter++;}
       }
       }
 
-  </script>
-
-  <script language="javascript" type="text/javascript">
-  function textToArray(){
-  var someArray = [];
-  var nameList = $("#inputtext").val();
-
-  $.each(nameList.split(/\n/), function (i, name) {
-
-    // empty string check
-      if(name != ""){
-
-      someArray.push(name);
-    }
-  });
   </script>
 
 </head>
